@@ -7583,7 +7583,7 @@ sub keyed_aclocal_warning
 sub usage
 {
     print <<EOF;
-Usage: automake [OPTION] ... [Makefile]...
+Usage: $0 [OPTION] ... [Makefile]...
 
 Generate Makefile.in for configure from Makefile.am.
 
