@@ -1,5 +1,9 @@
 2001-02-27  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&usage): Display $0, not $me.
+
+2001-02-27  Akim Demaille  <akim@epita.fr>
+
 	* mans.am: s/INSTALL_MAN/INSTALL-MAN/.
 	* automake.in (&handle_clean): Don't escape what's given to
 	&transform.
